--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/print/paper.css">
+		<link rel="stylesheet" href="css/theme/beige.css">
 		<script src="plugin/markdown/marked.js"></script>
 		<script src="plugin/markdown/markedown.js"></script>
 
@@ -27,14 +28,97 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="CONTRIBUTING.md"
+				<!-- slide 1: Intro -->
+				<section data-markdown="slides/slide1.md"
+				data-separator="^\n\n\n"
+				data-separator-vertical="^\n\n"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+						<!-- section to be filled out by MD files  -->
+				</section>
+
+				<!-- slide 2: the situation -->
+				<section data-markdown="slides/slide2.md"
 				data-separator="^\n\n\n"
 				data-separator-vertical="^\n\n"
 				data-separator-notes="^Note:"
 				data-charset="iso-8859-15">
 					<!-- section to be filled out by MD files  -->
 				</section>
-				<section>Slide 2</section>
+
+				<!-- slide 3: the job pt 1 -->
+				<section data-markdown="slides/slide3.md"
+				data-separator="^\n\n\n"
+				data-separator-vertical="^\n\n"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+					<!-- section to be filled out by MD files  -->
+				</section>
+
+
+				<!-- slide 4: problems summary -->
+				<section data-markdown="slides/slide4.md"
+				data-separator="^\n\n\n"
+				data-separator-vertical="^\n\n"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+					<!-- section to be filled out by MD files  -->
+				</section>
+
+				<!-- slide 5: the tilt -->
+				<section data-markdown="slides/slide5.md"
+				data-separator="^\n\n\n"
+				data-separator-vertical="^\n\n"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+					<!-- section to be filled out by MD files  -->
+				</section>
+
+				<!-- slide 6: the pivot/ the job pt 2 -->
+				<section data-markdown="slides/slide6.md"
+				data-separator="^\n\n\n"
+				data-separator-vertical="^\n\n"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+					<!-- section to be filled out by MD files  -->
+				</section>
+
+				<!-- slide 7: the pitch -->
+				<section data-markdown="slides/slide7.md"
+				data-separator="^\n\n\n"
+				data-separator-vertical="^\n\n"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+					<!-- section to be filled out by MD files  -->
+				</section>
+
+				<!-- slide 8: the delivery -->
+				<section data-markdown="slides/slide8.md"
+				data-separator="^\n\n\n"
+				data-separator-vertical="^\n\n"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+					<!-- section to be filled out by MD files  -->
+				</section>
+
+				<!-- slide 9: the conclusion -->
+				<section data-markdown="slides/slide9.md"
+				data-separator="^\n\n\n"
+				data-separator-vertical="^\n\n"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+					<!-- section to be filled out by MD files  -->
+				</section>
+
+				<!-- slide 10: the afterthoughts -->
+				<section data-markdown="slides/slide10.md"
+				data-separator="^\n\n\n"
+				data-separator-vertical="^\n\n"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+					<!-- section to be filled out by MD files  -->
+				</section>
+
 			</div>
 		</div>
 
